# pay_up

./: main.py  pyproject.toml
app/api/auth/: auth.py
app/api/partner/: client.py
app/api/payments/: payments.py
app/db/: database.py  models.py
app/utils/: jwt_utils.py
migrations/versions/: b721c5140ced_initial_migration.py
